apps/private/pgadmin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
  labels:
    kubernetes.io/metadata.name: pgadmin
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
